src/parser.automaton
State 0:
file' -> . file [ # ]
-- On WITH shift to state 1
-- On file shift to state 204

State 1:
file -> WITH . STDLIB SEMICOLON USE STDLIB SEMICOLON PROCEDURE IDENT IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON EOF [ # ]
-- On STDLIB shift to state 2

State 2:
file -> WITH STDLIB . SEMICOLON USE STDLIB SEMICOLON PROCEDURE IDENT IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON EOF [ # ]
-- On SEMICOLON shift to state 3

State 3:
file -> WITH STDLIB SEMICOLON . USE STDLIB SEMICOLON PROCEDURE IDENT IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON EOF [ # ]
-- On USE shift to state 4

State 4:
file -> WITH STDLIB SEMICOLON USE . STDLIB SEMICOLON PROCEDURE IDENT IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON EOF [ # ]
-- On STDLIB shift to state 5

State 5:
file -> WITH STDLIB SEMICOLON USE STDLIB . SEMICOLON PROCEDURE IDENT IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON EOF [ # ]
-- On SEMICOLON shift to state 6

State 6:
file -> WITH STDLIB SEMICOLON USE STDLIB SEMICOLON . PROCEDURE IDENT IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON EOF [ # ]
-- On PROCEDURE shift to state 7

State 7:
file -> WITH STDLIB SEMICOLON USE STDLIB SEMICOLON PROCEDURE . IDENT IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON EOF [ # ]
-- On IDENT shift to state 8

State 8:
file -> WITH STDLIB SEMICOLON USE STDLIB SEMICOLON PROCEDURE IDENT . IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON EOF [ # ]
-- On IS shift to state 9

State 9:
file -> WITH STDLIB SEMICOLON USE STDLIB SEMICOLON PROCEDURE IDENT IS . list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON EOF [ # ]
-- On TYPE shift to state 10
-- On PROCEDURE shift to state 34
-- On IDENT shift to state 15
-- On FUNCTION shift to state 52
-- On separated_nonempty_list(COMMA,IDENT) shift to state 58
-- On list(decl) shift to state 197
-- On decl shift to state 189
-- On BEGIN reduce production list(decl) -> 

State 10:
decl -> TYPE . IDENT SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
decl -> TYPE . IDENT IS ACCESS IDENT SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
decl -> TYPE . IDENT IS RECORD nonempty_list(field) END RECORD SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On IDENT shift to state 11

State 11:
decl -> TYPE IDENT . SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
decl -> TYPE IDENT . IS ACCESS IDENT SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
decl -> TYPE IDENT . IS RECORD nonempty_list(field) END RECORD SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On SEMICOLON shift to state 12
-- On IS shift to state 13

State 12:
decl -> TYPE IDENT SEMICOLON . [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On TYPE reduce production decl -> TYPE IDENT SEMICOLON 
-- On PROCEDURE reduce production decl -> TYPE IDENT SEMICOLON 
-- On IDENT reduce production decl -> TYPE IDENT SEMICOLON 
-- On FUNCTION reduce production decl -> TYPE IDENT SEMICOLON 
-- On BEGIN reduce production decl -> TYPE IDENT SEMICOLON 

State 13:
decl -> TYPE IDENT IS . ACCESS IDENT SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
decl -> TYPE IDENT IS . RECORD nonempty_list(field) END RECORD SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On RECORD shift to state 14
-- On ACCESS shift to state 31

State 14:
decl -> TYPE IDENT IS RECORD . nonempty_list(field) END RECORD SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On IDENT shift to state 15
-- On separated_nonempty_list(COMMA,IDENT) shift to state 18
-- On nonempty_list(field) shift to state 25
-- On field shift to state 29

State 15:
separated_nonempty_list(COMMA,IDENT) -> IDENT . [ COLON ]
separated_nonempty_list(COMMA,IDENT) -> IDENT . COMMA separated_nonempty_list(COMMA,IDENT) [ COLON ]
-- On COMMA shift to state 16
-- On COLON reduce production separated_nonempty_list(COMMA,IDENT) -> IDENT 

State 16:
separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA . separated_nonempty_list(COMMA,IDENT) [ COLON ]
-- On IDENT shift to state 15
-- On separated_nonempty_list(COMMA,IDENT) shift to state 17

State 17:
separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA separated_nonempty_list(COMMA,IDENT) . [ COLON ]
-- On COLON reduce production separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA separated_nonempty_list(COMMA,IDENT) 

State 18:
field -> separated_nonempty_list(COMMA,IDENT) . COLON stype SEMICOLON [ IDENT END ]
-- On COLON shift to state 19

State 19:
field -> separated_nonempty_list(COMMA,IDENT) COLON . stype SEMICOLON [ IDENT END ]
-- On IDENT shift to state 20
-- On ACCESS shift to state 21
-- On stype shift to state 23

State 20:
stype -> IDENT . [ SEMICOLON RPAR IS COLONEQ ]
-- On SEMICOLON reduce production stype -> IDENT 
-- On RPAR reduce production stype -> IDENT 
-- On IS reduce production stype -> IDENT 
-- On COLONEQ reduce production stype -> IDENT 

State 21:
stype -> ACCESS . IDENT [ SEMICOLON RPAR IS COLONEQ ]
-- On IDENT shift to state 22

State 22:
stype -> ACCESS IDENT . [ SEMICOLON RPAR IS COLONEQ ]
-- On SEMICOLON reduce production stype -> ACCESS IDENT 
-- On RPAR reduce production stype -> ACCESS IDENT 
-- On IS reduce production stype -> ACCESS IDENT 
-- On COLONEQ reduce production stype -> ACCESS IDENT 

State 23:
field -> separated_nonempty_list(COMMA,IDENT) COLON stype . SEMICOLON [ IDENT END ]
-- On SEMICOLON shift to state 24

State 24:
field -> separated_nonempty_list(COMMA,IDENT) COLON stype SEMICOLON . [ IDENT END ]
-- On IDENT reduce production field -> separated_nonempty_list(COMMA,IDENT) COLON stype SEMICOLON 
-- On END reduce production field -> separated_nonempty_list(COMMA,IDENT) COLON stype SEMICOLON 

State 25:
decl -> TYPE IDENT IS RECORD nonempty_list(field) . END RECORD SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On END shift to state 26

State 26:
decl -> TYPE IDENT IS RECORD nonempty_list(field) END . RECORD SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On RECORD shift to state 27

State 27:
decl -> TYPE IDENT IS RECORD nonempty_list(field) END RECORD . SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On SEMICOLON shift to state 28

State 28:
decl -> TYPE IDENT IS RECORD nonempty_list(field) END RECORD SEMICOLON . [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On TYPE reduce production decl -> TYPE IDENT IS RECORD nonempty_list(field) END RECORD SEMICOLON 
-- On PROCEDURE reduce production decl -> TYPE IDENT IS RECORD nonempty_list(field) END RECORD SEMICOLON 
-- On IDENT reduce production decl -> TYPE IDENT IS RECORD nonempty_list(field) END RECORD SEMICOLON 
-- On FUNCTION reduce production decl -> TYPE IDENT IS RECORD nonempty_list(field) END RECORD SEMICOLON 
-- On BEGIN reduce production decl -> TYPE IDENT IS RECORD nonempty_list(field) END RECORD SEMICOLON 

State 29:
nonempty_list(field) -> field . [ END ]
nonempty_list(field) -> field . nonempty_list(field) [ END ]
-- On IDENT shift to state 15
-- On separated_nonempty_list(COMMA,IDENT) shift to state 18
-- On nonempty_list(field) shift to state 30
-- On field shift to state 29
-- On END reduce production nonempty_list(field) -> field 

State 30:
nonempty_list(field) -> field nonempty_list(field) . [ END ]
-- On END reduce production nonempty_list(field) -> field nonempty_list(field) 

State 31:
decl -> TYPE IDENT IS ACCESS . IDENT SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On IDENT shift to state 32

State 32:
decl -> TYPE IDENT IS ACCESS IDENT . SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On SEMICOLON shift to state 33

State 33:
decl -> TYPE IDENT IS ACCESS IDENT SEMICOLON . [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On TYPE reduce production decl -> TYPE IDENT IS ACCESS IDENT SEMICOLON 
-- On PROCEDURE reduce production decl -> TYPE IDENT IS ACCESS IDENT SEMICOLON 
-- On IDENT reduce production decl -> TYPE IDENT IS ACCESS IDENT SEMICOLON 
-- On FUNCTION reduce production decl -> TYPE IDENT IS ACCESS IDENT SEMICOLON 
-- On BEGIN reduce production decl -> TYPE IDENT IS ACCESS IDENT SEMICOLON 

State 34:
decl -> PROCEDURE . IDENT option(params) IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On IDENT shift to state 35

State 35:
decl -> PROCEDURE IDENT . option(params) IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On LPAR shift to state 36
-- On params shift to state 49
-- On option(params) shift to state 50
-- On IS reduce production option(params) -> 

State 36:
params -> LPAR . separated_nonempty_list(SEMICOLON,param) RPAR [ RETURN IS ]
-- On IDENT shift to state 15
-- On separated_nonempty_list(SEMICOLON,param) shift to state 37
-- On separated_nonempty_list(COMMA,IDENT) shift to state 39
-- On param shift to state 46

State 37:
params -> LPAR separated_nonempty_list(SEMICOLON,param) . RPAR [ RETURN IS ]
-- On RPAR shift to state 38

State 38:
params -> LPAR separated_nonempty_list(SEMICOLON,param) RPAR . [ RETURN IS ]
-- On RETURN reduce production params -> LPAR separated_nonempty_list(SEMICOLON,param) RPAR 
-- On IS reduce production params -> LPAR separated_nonempty_list(SEMICOLON,param) RPAR 

State 39:
param -> separated_nonempty_list(COMMA,IDENT) . COLON option(mode) stype [ SEMICOLON RPAR ]
-- On COLON shift to state 40

State 40:
param -> separated_nonempty_list(COMMA,IDENT) COLON . option(mode) stype [ SEMICOLON RPAR ]
-- On IN shift to state 41
-- On option(mode) shift to state 43
-- On mode shift to state 45
-- On IDENT reduce production option(mode) -> 
-- On ACCESS reduce production option(mode) -> 

State 41:
mode -> IN . OUT [ IDENT ACCESS ]
mode -> IN . [ IDENT ACCESS ]
-- On OUT shift to state 42
-- On IDENT reduce production mode -> IN 
-- On ACCESS reduce production mode -> IN 

State 42:
mode -> IN OUT . [ IDENT ACCESS ]
-- On IDENT reduce production mode -> IN OUT 
-- On ACCESS reduce production mode -> IN OUT 

State 43:
param -> separated_nonempty_list(COMMA,IDENT) COLON option(mode) . stype [ SEMICOLON RPAR ]
-- On IDENT shift to state 20
-- On ACCESS shift to state 21
-- On stype shift to state 44

State 44:
param -> separated_nonempty_list(COMMA,IDENT) COLON option(mode) stype . [ SEMICOLON RPAR ]
-- On SEMICOLON reduce production param -> separated_nonempty_list(COMMA,IDENT) COLON option(mode) stype 
-- On RPAR reduce production param -> separated_nonempty_list(COMMA,IDENT) COLON option(mode) stype 

State 45:
option(mode) -> mode . [ IDENT ACCESS ]
-- On IDENT reduce production option(mode) -> mode 
-- On ACCESS reduce production option(mode) -> mode 

State 46:
separated_nonempty_list(SEMICOLON,param) -> param . [ RPAR ]
separated_nonempty_list(SEMICOLON,param) -> param . SEMICOLON separated_nonempty_list(SEMICOLON,param) [ RPAR ]
-- On SEMICOLON shift to state 47
-- On RPAR reduce production separated_nonempty_list(SEMICOLON,param) -> param 

State 47:
separated_nonempty_list(SEMICOLON,param) -> param SEMICOLON . separated_nonempty_list(SEMICOLON,param) [ RPAR ]
-- On IDENT shift to state 15
-- On separated_nonempty_list(SEMICOLON,param) shift to state 48
-- On separated_nonempty_list(COMMA,IDENT) shift to state 39
-- On param shift to state 46

State 48:
separated_nonempty_list(SEMICOLON,param) -> param SEMICOLON separated_nonempty_list(SEMICOLON,param) . [ RPAR ]
-- On RPAR reduce production separated_nonempty_list(SEMICOLON,param) -> param SEMICOLON separated_nonempty_list(SEMICOLON,param) 

State 49:
option(params) -> params . [ RETURN IS ]
-- On RETURN reduce production option(params) -> params 
-- On IS reduce production option(params) -> params 

State 50:
decl -> PROCEDURE IDENT option(params) . IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On IS shift to state 51

State 51:
decl -> PROCEDURE IDENT option(params) IS . list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On TYPE shift to state 10
-- On PROCEDURE shift to state 34
-- On IDENT shift to state 15
-- On FUNCTION shift to state 52
-- On separated_nonempty_list(COMMA,IDENT) shift to state 58
-- On list(decl) shift to state 191
-- On decl shift to state 189
-- On BEGIN reduce production list(decl) -> 

State 52:
decl -> FUNCTION . IDENT option(params) RETURN stype IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On IDENT shift to state 53

State 53:
decl -> FUNCTION IDENT . option(params) RETURN stype IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On LPAR shift to state 36
-- On params shift to state 49
-- On option(params) shift to state 54
-- On RETURN reduce production option(params) -> 

State 54:
decl -> FUNCTION IDENT option(params) . RETURN stype IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On RETURN shift to state 55

State 55:
decl -> FUNCTION IDENT option(params) RETURN . stype IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On IDENT shift to state 20
-- On ACCESS shift to state 21
-- On stype shift to state 56

State 56:
decl -> FUNCTION IDENT option(params) RETURN stype . IS list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On IS shift to state 57

State 57:
decl -> FUNCTION IDENT option(params) RETURN stype IS . list(decl) BEGIN nonempty_list(stmt) END option(IDENT) SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On TYPE shift to state 10
-- On PROCEDURE shift to state 34
-- On IDENT shift to state 15
-- On FUNCTION shift to state 52
-- On separated_nonempty_list(COMMA,IDENT) shift to state 58
-- On list(decl) shift to state 123
-- On decl shift to state 189
-- On BEGIN reduce production list(decl) -> 

State 58:
decl -> separated_nonempty_list(COMMA,IDENT) . COLON stype SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
decl -> separated_nonempty_list(COMMA,IDENT) . COLON stype COLONEQ expr SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On COLON shift to state 59

State 59:
decl -> separated_nonempty_list(COMMA,IDENT) COLON . stype SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
decl -> separated_nonempty_list(COMMA,IDENT) COLON . stype COLONEQ expr SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On IDENT shift to state 20
-- On ACCESS shift to state 21
-- On stype shift to state 60

State 60:
decl -> separated_nonempty_list(COMMA,IDENT) COLON stype . SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
decl -> separated_nonempty_list(COMMA,IDENT) COLON stype . COLONEQ expr SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On SEMICOLON shift to state 61
-- On COLONEQ shift to state 62

State 61:
decl -> separated_nonempty_list(COMMA,IDENT) COLON stype SEMICOLON . [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On TYPE reduce production decl -> separated_nonempty_list(COMMA,IDENT) COLON stype SEMICOLON 
-- On PROCEDURE reduce production decl -> separated_nonempty_list(COMMA,IDENT) COLON stype SEMICOLON 
-- On IDENT reduce production decl -> separated_nonempty_list(COMMA,IDENT) COLON stype SEMICOLON 
-- On FUNCTION reduce production decl -> separated_nonempty_list(COMMA,IDENT) COLON stype SEMICOLON 
-- On BEGIN reduce production decl -> separated_nonempty_list(COMMA,IDENT) COLON stype SEMICOLON 

State 62:
decl -> separated_nonempty_list(COMMA,IDENT) COLON stype COLONEQ . expr SEMICOLON [ TYPE PROCEDURE IDENT FUNCTION BEGIN ]
-- On TRUE shift to state 63
-- On SUB shift to state 64
-- On NULL shift to state 65
-- On NOT shift to state 66
-- On NEW shift to state 67
-- On LPAR shift to state 69
-- On INT shift to state 70
-- On IDENT shift to state 71
-- On FALSE shift to state 73
-- On CHARVAL shift to state 74
-- On CHAR shift to state 76
-- On expr shift to state 121
-- On access shift to state 84

State 63:
expr -> TRUE . [ THEN SUB SEMICOLON RPAR REM OR NEQ MUL LT LOOP LE GT GE EQ DOUBLEDOT DOT DIV COMMA AND ADD ]
-- On THEN reduce production expr -> TRUE 
-- On SUB reduce production expr -> TRUE 
-- On SEMICOLON reduce production expr -> TRUE 
-- On RPAR reduce production expr -> TRUE 
-- On REM reduce production expr -> TRUE 
-- On OR reduce production expr -> TRUE 
-- On NEQ reduce production expr -> TRUE 
-- On MUL reduce production expr -> TRUE 
-- On LT reduce production expr -> TRUE 
-- On LOOP reduce production expr -> TRUE 
-- On LE reduce production expr -> TRUE 
-- On GT reduce production expr -> TRUE 
-- On GE reduce production expr -> TRUE 
-- On EQ reduce production expr -> TRUE 
-- On DOUBLEDOT reduce production expr -> TRUE 
-- On DOT reduce production expr -> TRUE 
-- On DIV reduce production expr -> TRUE 
-- On COMMA reduce production expr -> TRUE 
-- On AND reduce production expr -> TRUE 
-- On ADD reduce production expr -> TRUE 

State 64:
expr -> SUB . expr [ THEN SUB SEMICOLON RPAR REM OR NEQ MUL LT LOOP LE GT GE EQ DOUBLEDOT DOT DIV COMMA AND ADD ]
-- On TRUE shift to state 63
-- On SUB shift to state 64
-- On NULL shift to state 65
-- On NOT shift to state 66
-- On NEW shift to state 67
-- On LPAR shift to state 69
-- On INT shift to state 70
-- On IDENT shift to state 71
-- On FALSE shift to state 73
-- On CHARVAL shift to state 74
-- On CHAR shift to state 76
-- On expr shift to state 120
-- On access shift to state 84

State 65:
expr -> NULL . [ THEN SUB SEMICOLON RPAR REM OR NEQ MUL LT LOOP LE GT GE EQ DOUBLEDOT DOT DIV COMMA AND ADD ]
-- On THEN reduce production expr -> NULL 
-- On SUB reduce production expr -> NULL 
-- On SEMICOLON reduce production expr -> NULL 
-- On RPAR reduce production expr -> NULL 
-- On REM reduce production expr -> NULL 
-- On OR reduce production expr -> NULL 
-- On NEQ reduce production expr -> NULL 
-- On MUL reduce production expr -> NULL 
-- On LT reduce production expr -> NULL 
-- On LOOP reduce production expr -> NULL 
-- On LE reduce production expr -> NULL 
-- On GT reduce production expr -> NULL 
-- On GE reduce production expr -> NULL 
-- On EQ reduce production expr -> NULL 
-- On DOUBLEDOT reduce production expr -> NULL 
-- On DOT reduce production expr -> NULL 
-- On DIV reduce production expr -> NULL 
-- On COMMA reduce production expr -> NULL 
-- On AND reduce production expr -> NULL 
-- On ADD reduce production expr -> NULL 

State 66:
expr -> NOT . expr [ THEN SUB SEMICOLON RPAR REM OR NEQ MUL LT LOOP LE GT GE EQ DOUBLEDOT DOT DIV COMMA AND ADD ]
-- On TRUE shift to state 63
-- On SUB shift to state 64
-- On NULL shift to state 65
-- On NOT shift to state 66
-- On NEW shift to state 67
-- On LPAR shift to state 69
-- On INT shift to state 70
-- On IDENT shift to state 71
-- On FALSE shift to state 73
-- On CHARVAL shift to state 74
-- On CHAR shift to state 76
-- On expr shift to state 119
-- On access shift to state 84

State 67:
expr -> NEW . IDENT [ THEN SUB SEMICOLON RPAR REM OR NEQ MUL LT LOOP LE GT GE EQ DOUBLEDOT DOT DIV COMMA AND ADD ]
-- On IDENT shift to state 68

State 68:
expr -> NEW IDENT . [ THEN SUB SEMICOLON RPAR REM OR NEQ MUL LT LOOP LE GT GE EQ DOUBLEDOT DOT DIV COMMA AND ADD ]
-- On THEN reduce production expr -> NEW IDENT 
-- On SUB reduce production expr -> NEW IDENT 
-- On SEMICOLON reduce production expr -> NEW IDENT 
-- On RPAR reduce production expr -> NEW IDENT 
-- On REM reduce production expr -> NEW IDENT 
-- On OR reduce production expr -> NEW IDENT 
-- On NEQ reduce production expr -> NEW IDENT 
-- On MUL reduce production expr -> NEW IDENT 
-- On LT reduce production expr -> NEW IDENT 
-- On LOOP reduce production expr -> NEW IDENT 
-- On LE reduce production expr -> NEW IDENT 
-- On GT reduce production expr -> NEW IDENT 
-- On GE reduce production expr -> NEW IDENT 
-- On EQ reduce production expr -> NEW IDENT 
-- On DOUBLEDOT reduce production expr -> NEW IDENT 
-- On DOT reduce production expr -> NEW IDENT 
-- On DIV reduce production expr -> NEW IDENT 
-- On COMMA reduce production expr -> NEW IDENT 
-- On AND reduce production expr -> NEW IDENT 
-- On ADD reduce production expr -> NEW IDENT 

State 69:
expr -> LPAR . expr RPAR [ THEN SUB SEMICOLON RPAR REM OR NEQ MUL LT LOOP LE GT GE EQ DOUBLEDOT DOT DIV COMMA AND ADD ]
-- On TRUE shift to state 63
-- On SUB shift to state 64
-- On NULL shift to state 65
-- On NOT shift to state 66
-- On NEW shift to state 67
-- On LPAR shift to state 69
-- On INT shift to state 70
-- On IDENT shift to state 71
-- On FALSE shift to state 73
-- On CHARVAL shift to state 74
-- On CHAR shift to state 76
-- On expr shift to state 117
-- On access shift to state 84
